--- a/EDA/EDA_Climate_Change.ipynb
+++ b/EDA/EDA_Climate_Change.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert your code here"
+    "# Insert your code here\n",
+    "# testing 123"
    ]
   },
   {
