--- a/EDA/EDA_Climate_Change.ipynb
+++ b/EDA/EDA_Climate_Change.ipynb
@@ -22,8 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert your code here\n",
-    "# testing 123"
+    "# Insert your code here"
    ]
   },
   {
