--- a/EDA/EDA_Climate_Change.ipynb
+++ b/EDA/EDA_Climate_Change.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DSKUS Group 1 EDA"
+    "# DSKUS Group 1 EDA\n",
+    "## Names below"
    ]
   },
   {
