--- a/EDA/EDA_Climate_Change.ipynb
+++ b/EDA/EDA_Climate_Change.ipynb
@@ -23,11 +23,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Dataset Name                        | Source                                      | Time Period       | Size       | Description                                                                                                                                                                                                                              |\n",
-    "|-------------------------------------|---------------------------------------------|-------------------|------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| GCP Fossil CO₂ Emissions Dataset    | [Global Carbon Project (GCP)](https://zenodo.org/record/5569235)                 | 1751 - 2021       | (63104, 11)    | Comprehensive global and national CO₂ emissions data since 2001; includes data on CO₂ emissions from various sources, such as coal, oil, gas, cement, flaring, and other sources.                                                        |\n",
-    "| Climate Watch Dataset               | [International Energy Agency (IEA), U.S. Environmental Protection Agency, U.N. Food and Agriculture Organization, Global Carbon Project](https://www.climatewatchdata.org)   | 1990 - 2019       | (10, 30)    | Covers all sectors and gases, including energy sub-sectors and Kyoto GHGs (CH4, CO2, N2O, F-gases); does not use countries' official inventories reported to the UNFCCC.                                                                |\n",
-    "| CO₂ Emission Dataset from Kaggle    | International Energy Agency (IEA) and United Nations Framework Convention on Climate Change (UNFCCC) | 1960 - 2020       | Unknown    | Provides a comprehensive overview of the amount of CO₂ emitted by each country; includes information on CO₂ emissions by country from 1960 to 2020; covers all countries in the world and is compiled from various sources.              |\n"
+    "Dataset Name: Global Energy Consumption (1990-2020) & Renewable Energy Generation (1997-2017)\n",
+    "\n",
+    "Source: [Kaggle Renewable Power Generation](https://www.kaggle.com/datasets/jamesvandenberg/renewable-power-generation)\n",
+    "\n",
+    "Time Period: 1990-2020 (Energy Consumption), 1997-2017 (Renewable Energy Generation)\n",
+    "\n",
+    "Description: Shows the energy consumption by continent and country from 1990 to 2020 in Terawatt-Hour (TWh). Also provides non-renewable energy production between 1997 and 2017, as well as the total amount of energy produced through renewable and non-renewable energy sources. Data on energy production from the top 20 countries are also provided.\n",
+    "\n",
+    "| Dataset Name                        | Source                                      | Time Period             | Size       | Description                                                                                                                                                                                                                              |\n",
+    "|-------------------------------------|---------------------------------------------|-------------------------|------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| GCP Fossil CO₂ Emissions Dataset    | [Global Carbon Project (GCP)](https://zenodo.org/record/5569235)                 | 1751 - 2021             | (63104, 11)| Comprehensive global and national CO₂ emissions data since 2001; includes data on CO₂ emissions from various sources, such as coal, oil, gas, cement, flaring, and other sources.                                                        |\n",
+    "| Climate Watch Dataset               | [International Energy Agency (IEA), U.S. Environmental Protection Agency, U.N. Food and Agriculture Organization, Global Carbon Project](https://www.climatewatchdata.org)   | 1990 - 2019             | (10, 30)    | Covers all sectors and gases, including energy sub-sectors and Kyoto GHGs (CH4, CO2, N2O, F-gases); does not use countries' official inventories reported to the UNFCCC.                                                                |\n",
+    "| CO₂ Emission Dataset from Kaggle    | International Energy Agency (IEA) and United Nations Framework Convention on Climate Change (UNFCCC) | 1960 - 2020             | Unknown    | Provides a comprehensive overview of the amount of CO₂ emitted by each country; includes information on CO₂ emissions by country from 1960 to 2020; covers all countries in the world and is compiled from various sources.              |\n",
+    "| Global Energy Consumption & Renewable Energy Generation | [Kaggle Renewable Power Generation](https://www.kaggle.com/datasets/jamesvandenberg/renewable-power-generation) | 1990-2020 (Energy Consumption), 1997-2017 (Renewable Energy Generation) | Unknown | Shows energy consumption by continent and country in Terawatt-Hour (TWh); includes non-renewable energy production and total amount of energy produced through renewable and non-renewable sources; data on top 20 countries provided. |\n"
    ]
   },
   {
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,22 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10, 30)"
+       "(28, 5)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ghg.shape"
+    "re_eng_gen_90_17.shape"
    ]
   },
   {
