finalized the notebook

--- a/EDA/EDA_Climate_Change.ipynb
+++ b/EDA/EDA_Climate_Change.ipynb
@@ -9,13 +9,16 @@
     "Date: Apr 13/2023\n",
     "\n",
     "Professor Mentor: Dr. Hyungwook Kim\n",
+    "\n",
     "Industry Mentor: Dr. Rujie Yin\n",
     "\n",
     "Group Members:\n",
     "- Kyi Moe Tun\n",
     "- Palak Maniar\n",
     "- Youmin Ko\n",
-    "- Hyunji Kim\n"
+    "- Hyunji Kim\n",
+    "\n",
+    "### Datasets Description\n"
    ]
   },
   {
@@ -23,20 +26,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset Name: Global Energy Consumption (1990-2020) & Renewable Energy Generation (1997-2017)\n",
-    "\n",
-    "Source: [Kaggle Renewable Power Generation](https://www.kaggle.com/datasets/jamesvandenberg/renewable-power-generation)\n",
-    "\n",
-    "Time Period: 1990-2020 (Energy Consumption), 1997-2017 (Renewable Energy Generation)\n",
-    "\n",
-    "Description: Shows the energy consumption by continent and country from 1990 to 2020 in Terawatt-Hour (TWh). Also provides non-renewable energy production between 1997 and 2017, as well as the total amount of energy produced through renewable and non-renewable energy sources. Data on energy production from the top 20 countries are also provided.\n",
-    "\n",
     "| Dataset Name                        | Source                                      | Time Period             | Size       | Description                                                                                                                                                                                                                              |\n",
     "|-------------------------------------|---------------------------------------------|-------------------------|------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
     "| GCP Fossil CO₂ Emissions Dataset    | [Global Carbon Project (GCP)](https://zenodo.org/record/5569235)                 | 1751 - 2021             | (63104, 11)| Comprehensive global and national CO₂ emissions data since 2001; includes data on CO₂ emissions from various sources, such as coal, oil, gas, cement, flaring, and other sources.                                                        |\n",
     "| Climate Watch Dataset               | [International Energy Agency (IEA), U.S. Environmental Protection Agency, U.N. Food and Agriculture Organization, Global Carbon Project](https://www.climatewatchdata.org)   | 1990 - 2019             | (10, 30)    | Covers all sectors and gases, including energy sub-sectors and Kyoto GHGs (CH4, CO2, N2O, F-gases); does not use countries' official inventories reported to the UNFCCC.                                                                |\n",
-    "| CO₂ Emission Dataset from Kaggle    | International Energy Agency (IEA) and United Nations Framework Convention on Climate Change (UNFCCC) | 1960 - 2020             | Unknown    | Provides a comprehensive overview of the amount of CO₂ emitted by each country; includes information on CO₂ emissions by country from 1960 to 2020; covers all countries in the world and is compiled from various sources.              |\n",
-    "| Global Energy Consumption & Renewable Energy Generation | [Kaggle Renewable Power Generation](https://www.kaggle.com/datasets/jamesvandenberg/renewable-power-generation) | 1990-2020 (Energy Consumption), 1997-2017 (Renewable Energy Generation) | Unknown | Shows energy consumption by continent and country in Terawatt-Hour (TWh); includes non-renewable energy production and total amount of energy produced through renewable and non-renewable sources; data on top 20 countries provided. |\n"
+    "| CO₂ Emission Dataset from Kaggle    | International Energy Agency (IEA) and United Nations Framework Convention on Climate Change (UNFCCC) | 1960 - 2020             | Varies by datasets    | Provides a comprehensive overview of the amount of CO₂ emitted by each country; includes information on CO₂ emissions by country from 1960 to 2020; covers all countries in the world and is compiled from various sources.              |\n",
+    "| Global Energy Consumption & Renewable Energy Generation | [Kaggle Renewable Power Generation](https://www.kaggle.com/datasets/jamesvandenberg/renewable-power-generation) | 1990-2020 (Energy Consumption), 1997-2017 (Renewable Energy Generation) | Varies by datasets | Shows energy consumption by continent and country in Terawatt-Hour (TWh); includes non-renewable energy production and total amount of energy produced through renewable and non-renewable sources; data on top 20 countries provided. |\n",
+    "| CO2 Emission Dataset                | [Climate Change Org](https://climatedata.imf.org/pages/climatechange-data) | 1990 - 2019 | (215, 35) | Covers the CO2 emissions from various countries; subdivides data into various regions like the South Asian and North American regions which have been highlighted in visualization. |\n"
    ]
   },
   {
@@ -78,41 +74,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reading the dataframes\n",
     "emission = pd.read_csv('../Datasets/emission_by_country.csv')  # GCP Fossil CO₂ Emissions Dataset\n",
     "ghg = pd.read_csv('../Datasets/ghg-emissions.csv', skipfooter=2)  # Climate Watch Dataset\n",
-    "cont_consump = pd.read_csv(\"../Datasets/Continent_Consumption_TWH.csv\")\n",
-    "country_consump = pd.read_csv(\"../Datasets/Country_Consumption_TWH.csv\")\n",
-    "nonre_eng = pd.read_csv(\"../Datasets/nonRenewablesTotalPowerGeneration.csv\")\n",
-    "re_eng_gen_90_17 = pd.read_csv(\"../Datasets/renewablePowerGeneration97-17.csv\")\n",
-    "re_eng_tot_gen = pd.read_csv(\"../Datasets/renewablesTotalPowerGeneration.csv\")\n",
-    "re_eng_countries = pd.read_csv(\"../Datasets/top20CountriesPowerGeneration.csv\")\n",
-    "ren_gen = pd.read_csv(\"../Datasets/USA_Ren_Gen.csv\") \n",
+    "cont_consump = pd.read_csv(\"../Datasets/Continent_Consumption_TWH.csv\") # Global Energy Consumption Dataset\n",
+    "country_consump = pd.read_csv(\"../Datasets/Country_Consumption_TWH.csv\") # Global Energy Consumption Dataset\n",
+    "nonre_eng = pd.read_csv(\"../Datasets/nonRenewablesTotalPowerGeneration.csv\") # Global Energy Consumption Dataset\n",
+    "re_eng_gen_90_17 = pd.read_csv(\"../Datasets/renewablePowerGeneration97-17.csv\") # Global Energy Consumption Dataset\n",
+    "re_eng_tot_gen = pd.read_csv(\"../Datasets/renewablesTotalPowerGeneration.csv\") # Global Energy Consumption Dataset\n",
+    "re_eng_countries = pd.read_csv(\"../Datasets/top20CountriesPowerGeneration.csv\") # Global Energy Consumption Dataset\n",
+    "ren_gen = pd.read_csv(\"../Datasets/USA_Ren_Gen.csv\")  \n",
     "co2_df = pd.read_csv('../Datasets/World_CO2_emission.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(28, 5)"
+       "(215, 35)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "re_eng_gen_90_17.shape"
+    "co2_df.shape"
    ]
   },
   {
@@ -566,20 +562,6 @@
     "                          \"Other\": \"Other Nonrenewable Energy\"}, inplace=True)\n",
     "nonre_eng.info()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
