added missing years in pop_stab dataset

--- a/Machine Learning/data_wrangling.ipynb
+++ b/Machine Learning/data_wrangling.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,28 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "# defining a list of countries\n",
     "countries_of_interest = ['USA', 'CHN', 'KOR']\n",
     "# get all the rows for each country of interest\n",
-    "pop_stab = pop_stab[pop_stab['Country Code'].isin(countries_of_interest)]"
+    "pop_stab = pop_stab[pop_stab['Country Code'].isin(countries_of_interest)]\n",
+    "# renaming the columns by removing [YR]\n",
+    "pop_stab = pop_stab.rename(columns={col: re.sub(r'\\s*\\[YR.*\\]', '', col) for col in pop_stab.columns[4:]})\n",
+    "# Change the type of year columns to float\n",
+    "for col in pop_stab.columns[4:]:\n",
+    "    pop_stab[col] = pop_stab[col].astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_stab = pop_stab.rename(columns={col: re.sub(r'\\s*\\[YR.*\\]', '', col) for col in pop_stab.columns[4:]})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +63,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As you can see above, certain years are missing from the columns\n",
+    "missing_years = [1997, 1999, 2001]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +95,8 @@
     "\n",
     "        # Check if previous and next year columns exist\n",
     "        if prev_year in df.columns and next_year in df.columns:\n",
+    "            df[prev_year] = pd.to_numeric(df[prev_year], errors='coerce')\n",
+    "            df[next_year] = pd.to_numeric(df[next_year], errors='coerce')\n",
     "            df[str(year)] = (df[prev_year] + df[next_year]) / 2\n",
     "        else:\n",
     "            print(f\"Cannot compute for year {year}, adjacent years data are not available.\")\n",
@@ -98,8 +106,70 @@
     "    year_cols = [str(i) for i in sorted(int(col) for col in df.columns if col.isdigit())]\n",
     "    cols = non_year_cols + year_cols\n",
     "    \n",
-    "    return df.reindex(columns=cols)\n"
+    "    return df.reindex(columns=cols)\n",
+    "\n",
+    "pop_stab = insert_missing_years(pop_stab, missing_years)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 3 entries, 40 to 203\n",
+      "Data columns (total 30 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Country Name  3 non-null      object \n",
+      " 1   Country Code  3 non-null      object \n",
+      " 2   Series Name   3 non-null      object \n",
+      " 3   Series Code   3 non-null      object \n",
+      " 4   1996          3 non-null      float64\n",
+      " 5   1997          3 non-null      float64\n",
+      " 6   1998          3 non-null      float64\n",
+      " 7   1999          3 non-null      float64\n",
+      " 8   2000          3 non-null      float64\n",
+      " 9   2001          3 non-null      float64\n",
+      " 10  2002          3 non-null      float64\n",
+      " 11  2003          3 non-null      float64\n",
+      " 12  2004          3 non-null      float64\n",
+      " 13  2005          3 non-null      float64\n",
+      " 14  2006          3 non-null      float64\n",
+      " 15  2007          3 non-null      float64\n",
+      " 16  2008          3 non-null      float64\n",
+      " 17  2009          3 non-null      float64\n",
+      " 18  2010          3 non-null      float64\n",
+      " 19  2011          3 non-null      float64\n",
+      " 20  2012          3 non-null      float64\n",
+      " 21  2013          3 non-null      float64\n",
+      " 22  2014          3 non-null      float64\n",
+      " 23  2015          3 non-null      float64\n",
+      " 24  2016          3 non-null      float64\n",
+      " 25  2017          3 non-null      float64\n",
+      " 26  2018          3 non-null      float64\n",
+      " 27  2019          3 non-null      float64\n",
+      " 28  2020          3 non-null      float64\n",
+      " 29  2021          3 non-null      float64\n",
+      "dtypes: float64(26), object(4)\n",
+      "memory usage: 744.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "pop_stab.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
