showed the dataframes

--- a/Machine Learning/data_wrangling.ipynb
+++ b/Machine Learning/data_wrangling.ipynb
@@ -2089,6 +2089,284 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Stability</th>\n",
+       "      <th>Inflation</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Urban_Population</th>\n",
+       "      <th>HDI</th>\n",
+       "      <th>Life_Expectancy</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>co2_emission</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Korea, Rep.</td>\n",
+       "      <td>KOR</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>0.385621</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>51361911.0</td>\n",
+       "      <td>81.503</td>\n",
+       "      <td>0.916</td>\n",
+       "      <td>83.2855</td>\n",
+       "      <td>1.623901e+12</td>\n",
+       "      <td>654537300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Korea, Rep.</td>\n",
+       "      <td>KOR</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0.637073</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>51585058.0</td>\n",
+       "      <td>81.459</td>\n",
+       "      <td>0.919</td>\n",
+       "      <td>83.3427</td>\n",
+       "      <td>1.724846e+12</td>\n",
+       "      <td>670168700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Korea, Rep.</td>\n",
+       "      <td>KOR</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.551206</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>51764822.0</td>\n",
+       "      <td>81.430</td>\n",
+       "      <td>0.923</td>\n",
+       "      <td>83.6557</td>\n",
+       "      <td>1.651423e+12</td>\n",
+       "      <td>646102200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Korea, Rep.</td>\n",
+       "      <td>KOR</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0.566344</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>51836239.0</td>\n",
+       "      <td>81.414</td>\n",
+       "      <td>0.922</td>\n",
+       "      <td>83.6089</td>\n",
+       "      <td>1.644313e+12</td>\n",
+       "      <td>597634240.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Korea, Rep.</td>\n",
+       "      <td>KOR</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>0.662571</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>51744876.0</td>\n",
+       "      <td>81.414</td>\n",
+       "      <td>0.925</td>\n",
+       "      <td>83.6978</td>\n",
+       "      <td>1.810956e+12</td>\n",
+       "      <td>616075000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country Name Country Code  Year  Stability  Inflation  Population  \\\n",
+       "64  Korea, Rep.          KOR  2017   0.385621       1.94  51361911.0   \n",
+       "67  Korea, Rep.          KOR  2018   0.637073       1.48  51585058.0   \n",
+       "70  Korea, Rep.          KOR  2019   0.551206       0.38  51764822.0   \n",
+       "73  Korea, Rep.          KOR  2020   0.566344       0.54  51836239.0   \n",
+       "76  Korea, Rep.          KOR  2021   0.662571       2.50  51744876.0   \n",
+       "\n",
+       "    Urban_Population    HDI  Life_Expectancy           GDP  co2_emission  \n",
+       "64            81.503  0.916          83.2855  1.623901e+12   654537300.0  \n",
+       "67            81.459  0.919          83.3427  1.724846e+12   670168700.0  \n",
+       "70            81.430  0.923          83.6557  1.651423e+12   646102200.0  \n",
+       "73            81.414  0.922          83.6089  1.644313e+12   597634240.0  \n",
+       "76            81.414  0.925          83.6978  1.810956e+12   616075000.0  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "korea_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Stability</th>\n",
+       "      <th>Inflation</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Urban_Population</th>\n",
+       "      <th>HDI</th>\n",
+       "      <th>Life_Expectancy</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>co2_emission</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>0.291817</td>\n",
+       "      <td>2.14</td>\n",
+       "      <td>325122128.0</td>\n",
+       "      <td>82.058</td>\n",
+       "      <td>0.924</td>\n",
+       "      <td>78.8213</td>\n",
+       "      <td>1.947734e+13</td>\n",
+       "      <td>5.210957e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0.421418</td>\n",
+       "      <td>2.44</td>\n",
+       "      <td>326838199.0</td>\n",
+       "      <td>82.256</td>\n",
+       "      <td>0.927</td>\n",
+       "      <td>78.9896</td>\n",
+       "      <td>2.053306e+13</td>\n",
+       "      <td>5.376657e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.134975</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>328329953.0</td>\n",
+       "      <td>82.459</td>\n",
+       "      <td>0.930</td>\n",
+       "      <td>79.1380</td>\n",
+       "      <td>2.138098e+13</td>\n",
+       "      <td>5.259144e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0.033438</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>331501080.0</td>\n",
+       "      <td>82.664</td>\n",
+       "      <td>0.920</td>\n",
+       "      <td>77.4144</td>\n",
+       "      <td>2.106047e+13</td>\n",
+       "      <td>4.715691e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>0.004954</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>331893745.0</td>\n",
+       "      <td>82.873</td>\n",
+       "      <td>0.921</td>\n",
+       "      <td>77.1982</td>\n",
+       "      <td>2.331508e+13</td>\n",
+       "      <td>5.007336e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Country Name Country Code  Year  Stability  Inflation   Population  \\\n",
+       "65  United States          USA  2017   0.291817       2.14  325122128.0   \n",
+       "68  United States          USA  2018   0.421418       2.44  326838199.0   \n",
+       "71  United States          USA  2019   0.134975       1.81  328329953.0   \n",
+       "74  United States          USA  2020   0.033438       1.23  331501080.0   \n",
+       "77  United States          USA  2021   0.004954       4.70  331893745.0   \n",
+       "\n",
+       "    Urban_Population    HDI  Life_Expectancy           GDP  co2_emission  \n",
+       "65            82.058  0.924          78.8213  1.947734e+13  5.210957e+09  \n",
+       "68            82.256  0.927          78.9896  2.053306e+13  5.376657e+09  \n",
+       "71            82.459  0.930          79.1380  2.138098e+13  5.259144e+09  \n",
+       "74            82.664  0.920          77.4144  2.106047e+13  4.715691e+09  \n",
+       "77            82.873  0.921          77.1982  2.331508e+13  5.007336e+09  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usa_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
